--- a/maxcare/templates/prescription_mail.html
+++ b/maxcare/templates/prescription_mail.html
@@ -84,12 +84,12 @@
 
 <!-- THREE COLUMN SECTION -->
 
-        <tr>
+        <tr >
             <td class="content" width="100%" style="padding:10px 25px;"> Hi {{ username }}, <br><br>
 
-                Thanks for getting in touch. <br><br>
+                Thanks for visiting, we hope and ensure that you get well as soon as possible. <br><br>
                 
-                This is a confirmation email regarding your appointment at Maxcare with Dr. {{ doctor_first_name }} {{ doctor_last_name }} on {{ date }}, {{ day }}. Please be available on shceduled date. <br><br>
+                Here’s the attached prescription from your appointment at Maxcare with Dr. {{ doctor_first_name }} {{ doctor_last_name }} on {{ date }}, {{ day }}.                
                 
                 Regards, <br><br>
                 
